--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -6,7 +6,7 @@
         </div>
 
         <!-- Menu Button-->
-        <a class="btn_menu clapat-menubtn">
+        <a class="btn_menu clapat-menubtn" (click)="menuClick()">
             <span class="btn_menu_line"></span>
             <span class="btn_menu_line"></span>
             <span class="btn_menu_line"></span>
@@ -35,15 +35,6 @@
                      <ul>
                         <li><a [routerLink]="['store/apparel']">Apparel</a></li>
                         <li><a [routerLink]="['store/special-edition']">Special Edition Items</a></li>
-                        <!--<li><a [routerLink]="['apparel/mens']">Men's</a></li>
-                        <li><a [routerLink]="['apparel/womens']">Women's</a></li>
-                        <li><a [routerLink]="['apparel/kids']">Kids's</a></li>
-                        <li><a href="#">Women's</a></li>
-                        <li><a href="#">Kid's</a></li>
-                        <li><a [routerLink]="['apparel/accessories']">Accessories</a></li>
-                        <li><a [routerLink]="['apparel/hats']">Hats</a></li>
-                        <li><a [routerLink]="['apparel/hoodies']">Hoodies</a></li>
-                        <li><a [routerLink]="['apparel/shirts']">Shirts</a></li>-->
                     </ul>
                 </li>
                 <li><a [routerLink]="['company/calendar']">Calendar</a></li>
@@ -63,49 +54,43 @@
             </ul>
         </div>
 
-        <!-- Overlay Menu -->
-        <!--<nav class="clapat-overlay-menu">
-
-        </nav>-->
-
-    </div>
-</header>
-
-
-        <!--Overlay Menu -->
-        <!--<nav class="clapat-overlay-menu">-->
-            <!--<div class="clapat-menu-container">
+        <nav *ngIf="menuclicked" class="clapat-overlay-menu">
+            <div class="clapat-menu-container">
                 <div class="outer">
                     <div class="inner">
-                        <div class="scr_menu">
+                        <div class="src_menu">
                             <div class="outer">
                                 <div class="inner text-align-center">
                                     <ul class="categories">
                                         <li class="menu-item"><a href="index.html">Home</a></li>
 
                                         <li class="menu-item dropdown"><a class="no-action">Snowboards</a>
-                                          <ul class="submenu">                         
+                                            <ul class="submenu">                         
                                                 <li><a href="snowboards/index.html">Snowboard Home</a></li>
                                                 <li><a href="snowboards/videos.html">Snowboard Videos</a></li>
                                                 <li><a href="snowboards/tech.html">Snowboard Tech</a></li>
-                                                <li><a href="snowboards/team.html">Team Page</a></li>
+                                                <li><a href="snowboards/team.html">Team Page</a></li>                      
                                             </ul>
-                                        </li> 
-
+                                        </li>
+                                    
                                         <li class="menu-item dropdown"><a class="no-action">Longboards</a>
-                                          <ul class="submenu">                         
+                                            <ul class="submenu">                         
                                                 <li><a href="longboards/index.html">Longboard Selector</a></li>
                                                 <li><a href="longboards/videos.html">Longboard Videos</a></li> 
                                                 <li><a href="longboards/tech.html">Longboard Tech</a></li>                     
                                             </ul>
                                         </li>
-  
-                                        <li class="menu-item"><a href="apparel/index.html">Apparel</a></li>
-
+                                        
+                                        <li class="menu-item dropdown"><a class="no-action">Store</a>
+                                            <ul class="submenu">                         
+                                                <li><a href="apparel/index.html">Apparel</a></li>
+                                                <li><a href="store/25th-anniversary-items.html">Special Edition Items</a></li>                     
+                                            </ul>
+                                        </li>
+                                        
                                         <li class="menu-item"><a href="company/calendar.html">Calendar</a></li>
-
                                         <li class="menu-item dropdown"><a class="no-action">Company</a>
-                                          <ul class="submenu">
+                                            <ul class="submenu">
                                                 <li><a href="company/dealers.html">Dealers</a></li>
                                                 <li><a href="company/warranty.html">Warranty / Ticket to Shred Registration</a></li>
                                                 <li><a href="company/news.html">News Feed</a></li>
@@ -115,33 +100,34 @@
                                                 <li><a href="http://www.scsunlimited.com/sled-wraps/signature-series/never-summer.html" target="_blank">Snowmobile Wraps</a></li>                  
                                             </ul>
                                         </li>
+                                        <li class="menu-item"><div id="catCartSummary" data-quote="False" data-vertical="False" data-templateName="/Layouts/custom/cartsummary-txt.tpl" data-templateHash="zGFDbg8/1QXrHYEBHP+pne63YZE="><a href="OrderRetrievev2.aspx-CatalogueID=0.html">View Cart</a></div></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>-->
-                
-      <!-- Hamburger Menu -->
-                <!--<a class="clapat-menuclosebtn">
-                  <div class="closebtn-rotate">
+                </div>
+
+                <a class="clapat-menuclosebtn" (click)="menuClose()">
+                    <div class="closebtn-rotate">
                         <span class="btn_menu_line"></span>
                         <span class="btn_menu_line"></span>
                     </div>
                 </a>
-
                 <p class="menu-copyright"></p>
-                <ul class="menu-socials">                        
+                <ul class="menu-socials">
+                    <li>Tester</li>                        
                     <li><a href="https://www.facebook.com/NeverSummerIndustries" target="_blank"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="https://twitter.com/neversummerind" target="_blank"><i class="fa fa-twitter"></i></a></li> 	
                     <li><a href="https://www.youtube.com/channel/UC5DbXM5UmMNfVkP4fPkSYFg" target="_blank"><i class="fa fa-youtube"></i></a></li>
                     <li><a href="http://instagram.com/neversummerindustries" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                  <li><a href="https://plus.google.com/+neversummer/posts" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href="https://plus.google.com/+neversummer/posts" target="_blank"><i class="fa fa-google-plus"></i></a></li>
                 </ul>
             </div>
-
             <div class="clapat-menubg">
                 <div class="clapat-menubg-overlay"></div>
-            </div>    -->
-        <!--</nav>-->
-        <!-- ENDING OF Overlay Menu-->
+            </div>
+        </nav>
+    </div>
+</header>
+
